# --9

1/: 1.cpp  CMakeLists.txt
2/: 2.sln  CMakeLists.txt
2/2/: 2.cpp  2.h  2.vcxproj  2.vcxproj.filters  RAtriangle.cpp  RAtriangle.h  equitriangle.cpp  equitriangle.h  issostriangle.cpp  issostriangle.h  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  square.cpp  square.h  triangle.cpp  triangle.h
